Finish the elm version

--- a/src/index.html
+++ b/src/index.html
@@ -1,135 +1,8 @@
-<!DOCTYPE html>
-<html>
-
-<meta charset="UTF-8"/>
+<!doctype html>
+<meta charset=utf-8>
+<meta name=referrer content=none>
 <title>f6oclock</title>
-
-<style>
-    body {
-        margin: 0;
-        width: 100%;
-    }
-
-    ol {
-        margin: 0;
-        padding: 0;
-    }
-
-    li {
-        list-style-type: none;
-        padding-bottom: 0.4em;
-    }
-
-    .i0 {
-        background-color: #ffd8b2;
-    }
-
-    .i1 {
-        background-color: #fffb7f;
-    }
-
-    .i2 {
-        background-color: #ffa64c;
-    }
-
-    a.storyLink {
-        font-family: sans-serif;
-        text-decoration: none;
-        color: black;
-    }
-
-    a.commentsLink {
-        margin-left: 0.5em;
-        text-decoration: none;
-        color: #555;
-    }
-
-    span.ref {
-        font-style: italic;
-        float: right;
-        color: #555;
-    }
-</style>
-
-<ol id="posts"></ol>
-
-<script>
-    update();
-
-    async function update() {
-        // fetch
-        const resp = await fetch('https://www.reddit.com/r/politics/rising.json');
-        const data = await resp.json();
-
-        const postsElem = document.getElementById('posts');
-        const postElems = document.createDocumentFragment();
-
-        const postsData = data.data.children;
-        postsData.sort((a,b) => b.data.ups - a.data.ups);
-
-        // render
-        for(let postData of postsData) {
-            postData = postData.data;
-
-            const li = document.createElement('li');
-            const intensity = color(postData.ups);
-
-            if(intensity) {
-                li.className = intensity;
-            }
-
-            const storyLink = document.createElement('a');
-            storyLink.className = 'storyLink';
-            storyLink.href = postData.url;
-            storyLink.textContent = postData.title;
-            li.appendChild(storyLink);
-
-            const commentsLink = document.createElement('a');
-            commentsLink.className = 'commentsLink';
-            commentsLink.href = 'https://reddit.com' + postData.permalink;
-            commentsLink.textContent = 'comments';
-            li.appendChild(commentsLink);
-
-            const ref = document.createElement('span');
-            ref.className = 'ref';
-            ref.textContent = getRef(postData.url);
-            li.appendChild(ref);
-
-            postElems.appendChild(li);
-        }
-
-        // replace
-        deleteChildren(postsElem);
-        postsElem.appendChild(postElems);
-    }
-
-    function getRef(url) {
-        const host = new URL(url).host;
-        
-        if(host.startsWith('www.')) {
-            return host.substr(4);
-        } else {
-            return host;
-        }
-    }
-
-    function deleteChildren(elem) {
-        while(elem.firstChild) {
-            elem.removeChild(elem.firstChild);
-        }
-    }
-
-    function color(ups) {
-        if(ups < 100) {
-            return null;
-        } else if(ups >= 100 && ups < 250) {
-            return 'i0';
-        } else if(ups >= 250 && ups < 500) {
-            return 'i1';
-        } else {
-            return 'i2';
-        }
-    }
-
-    setInterval(update, 2000);
-</script>
+<link rel="stylesheet" href="styles.css">
+<script src="main.js"></script>
+<body>
+<script>Elm.Main.embed(document.body);</script>
