Allow index.html to hold a cached/pre-loaded list of posts

--- a/src/index.html
+++ b/src/index.html
@@ -5,4 +5,8 @@
 <link rel="stylesheet" href="styles.css">
 <script src="main.js"></script>
 <body>
-<script>Elm.Main.embed(document.body);</script>
+<script>
+    // don't edit the next statement: it is search-and-replaced by the cache job.
+    const cache = { posts: [] };
+    Elm.Main.fullscreen(cache);
+</script>
