Minify main.js using uglify-js

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <meta name=referrer content=none>
 <title>f6oclock</title>
 <link rel="stylesheet" href="styles.css">
-<script src="main.js"></script>
+<script src="main.min.js"></script>
 <body>
 <script>
     // don't edit the next statement: it is search-and-replaced by the cache job.
